--- a/README.org
+++ b/README.org
@@ -6,3 +6,5 @@ fixpoints. Variables are represented via de Bruijn indices, in a style
 akin to [[https://plfa.github.io/][Programming Language Foundations in Agda]]. The main result is
 the definition of a coalgebra $\gamma$ with the HO-GSOS framework
 layed out in [[https://arxiv.org/abs/2405.16708][Higher-Order Mathematical Operational Semantics]].
+
+Browse the source code on [[https://flogth.github.io/ccs]]
